二叉树习题以及笔记等

--- a/notebook/22.5.30start.md
+++ b/notebook/22.5.30start.md
@@ -1,3 +1,6 @@
+## 学习计划
+  - 计划学习json的读取和写入，[学习链接](https://blog.csdn.net/shuiyixin/article/details/89330529)
+
 ##  笔记2022.5.30
 ### stow 对二进制源码安装进行管理
 + stow的安装
@@ -56,4 +59,22 @@
   ```
   然后在右下角添加terminal中选择默认配置，将git设置为默认terminal即可。
 
-  
+### 关于cin.peek(),cin.get(),连续cin同一类型时的输入情况
+  - cin.peek()
+    cin.peek()只会读取输入流，不影响输入流指针，例如输入abcd后peek，返回值为a，之后紧跟cin >> < string >,string值为abcd
+
+    注意的是，cin.peek会将空格视为有效字符
+  - cin.get()
+    cin.get()读取输入流并将指针移动到下一位，读取类型为char。
+
+    如果连续读取，例如输入abcd连续两次cin.get()，只有第一次get到字符，为a，第二次还在等待输入。
+
+    cin同cin.get
+
+    但是当读取类型不同时，例如f1f2f3进行
+    > cin >> < char >;
+
+    > cin >> < int >;
+    
+    则不会产生相互影响。
+
