--- a/notebook/22.5.30start.md
+++ b/notebook/22.5.30start.md
@@ -78,3 +78,14 @@
     
     则不会产生相互影响。
 
+### C++中数字转换为字符串
+  [原帖链接](https://blog.csdn.net/PROGRAM_anywhere/article/details/63720261)  
+  1. printf法
+  2. 使用itoa函数，但是只能转换int
+  3. 纯C++风格
+  ```
+    ostringstream oss;
+    oss << s << a << b;
+  ```
+  4. 使用to_string  
+  > string res = str + to_string(a);
