Binary Tree Print Success!!!

--- a/notebook/22.5.30start.md
+++ b/notebook/22.5.30start.md
@@ -1,8 +1,8 @@
 ## 学习计划
   - 计划学习json的读取和写入，[学习链接](https://blog.csdn.net/shuiyixin/article/details/89330529)
 
-##  笔记2022.5.30
-### stow 对二进制源码安装进行管理
+#  笔记2022.5.30
+## stow 对二进制源码安装进行管理
 + stow的安装
   在centos中：
   ```
@@ -39,11 +39,11 @@
 
   想了解更多 Stow 的细节，请参阅 man 手册。
 
-### fuck163安装过程
+## fuck163安装过程
 + 暂略
   
 
-### vscode中shell launcher调教
+## vscode中shell launcher调教
   暂未采用shell launcher
 
   而是直接用vscode中的设置项，setting.json中配置如下：
@@ -59,7 +59,7 @@
   ```
   然后在右下角添加terminal中选择默认配置，将git设置为默认terminal即可。
 
-### 关于cin.peek(),cin.get(),连续cin同一类型时的输入情况
+## 关于cin.peek(),cin.get(),连续cin同一类型时的输入情况
   - cin.peek()
     cin.peek()只会读取输入流，不影响输入流指针，例如输入abcd后peek，返回值为a，之后紧跟cin >> < string >,string值为abcd
 
@@ -78,7 +78,7 @@
     
     则不会产生相互影响。
 
-### C++中数字转换为字符串
+## C++中数字转换为字符串
   [原帖链接](https://blog.csdn.net/PROGRAM_anywhere/article/details/63720261)  
   1. printf法
   2. 使用itoa函数，但是只能转换int
@@ -89,3 +89,29 @@
   ```
   4. 使用to_string  
   > string res = str + to_string(a);
+
+## C++中对于string 和stringstream的理解
+  ### string
+  不能用>> 、<< ，可以用+、-、+=、-=这些符号运算，末位没有空字符
+
+  而对于sprintf生成的字符串，是会自动生成一个空字符结尾。
+
+  而且sprintf也不能作用于string！
+
+  ### stringstream
+  首先要注意的是该类型需要头文件<sstream>
+
+  直接用流控制符对字符串流进行操作，例如：
+  ```
+  std::stringstream stream;
+  char result[8] ;
+  stream << 8888; //向stream中插入8888
+  stream >> result; //抽取stream中的值到result
+  std::cout << result << std::endl; // 屏幕显示 "8888"
+  ```
+[关于cout格式化输出（即流操纵算子）](http://c.biancheng.net/view/275.html)
+
+[对stringstream的讲解](https://blog.csdn.net/xw20084898/article/details/21939811)
+
+[string类讲解](http://c.biancheng.net/view/400.html)
+
