--- a/notebook/22.5.30start.md
+++ b/notebook/22.5.30start.md
@@ -115,3 +115,25 @@
 
 [string类讲解](http://c.biancheng.net/view/400.html)
 
+## 静态变量在递归函数中
+  静态变量在程序的整个执行期间一直存在，创建于程序执行之前。其作用域在代码块中，而不是每次运行代码块生成新的变量。
+
+## git设置、查看、取消代理
+设置代理：
+```
+  git config --global http.proxy 'socks5://127.0.0.1:1080' 
+  git config --global https.proxy 'socks5://127.0.0.1:1080'
+```
+查看代理：
+```
+  git config --global --get http.proxy
+  git config --global --get https.proxy
+```
+取消代理：
+```
+  git config --global --unset http.proxy
+  git config --global --unset https.proxy
+```
+
+## 7.3github连接不上，增加代理文件config
+  位置：D:\Program Files\Git\etc\ssh
