--- a/notebook/22.5.30start.md
+++ b/notebook/22.5.30start.md
@@ -136,4 +136,20 @@
 ```
 
 ## 7.3github连接不上，增加代理文件config
-  位置：D:\Program Files\Git\etc\ssh
+  .ssh文件内config添加
+  ```
+  Host github.com
+  User KINGAND
+  Hostname ssh.github.com
+  PreferredAuthentications publickey
+  IdentityFile ~/.ssh/id_rsa
+  Port 443  
+
+  Host gitlab.com
+  Hostname altssh.gitlab.com
+  User KINGAND
+  Port 443
+  PreferredAuthentications publickey
+  IdentityFile ~/.ssh/id_rsa
+  ```
+  据教程需要添加git user name 和 user email
